# GENERAL-GOVERNANCE-

./: .gitignore  CROSS_REPOSITORY_REGISTER.md  Makefile  README.md  pyproject.toml
.github/workflows/: uniform-build.yml
SPEC/: conformance-checklist.md  kex-canonical.md  kex_reference_validator.py
docs/: BILATERAL_ROLLOUT.md  KEDDEH_THEOREM_BRAINK_MASTER_v1.3.md  KEDDEH_THEOREM_BRAINK_MASTER_v1.4.md  LIVE_STATE_v1.6.json  RESEARCH_SUMMARY.md
docs/governance/: agentic-intelligence-cli.md  automation-protocol-standard.md  manifest.json  repository-governance-standard.md  strict-deep-analysis-comment.md
docs/ops/: BRAINK_RUNTIME_LANE.json  BUILD_MATRIX_PIPELINE.json  MATERIAL_FAILURE_CALIBRATION.json  OPS_MANIFEST.json  ORGANISM_CORE_PROCESS.json  REGISTRY_INTEGRITY_CHECK.json  SPIKE_BOUNDARY_CALIBRATION.json  VM_BRAIN.json  ZERO_CLASSIFIER_GATE.json
scripts/: auto_ops_commit.py  bilateral_rollout.sh  build_linux.sh  build_macos.sh  build_windows.ps1  dual_head_update.sh  launch.py  validate-governance.py
sector-evolution-v5/: PACKAGE_LOCATION.md  README.md  sector_registry.json
sector-evolution-v5/compiler/: kex_sector_compiler.py
sector-evolution-v5/receipts/: coverage_report.json
sector-evolution-v5/schemas/: sector_execution_receipt.schema.json
src/keddeh_mesh_os/: __init__.py  zero_less_runtime.py
src/virtual_brain_pc/: __init__.py  agent_directive_dispatcher.py  agents.py  automation_protocol.py  braink_runtime.py  cli.py  cognition.py  core.py  governance_automation.py  (+11 more)
tests/: test_kex_canonical.py  test_smoke.py  test_zero_less_runtime.py
