[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-brain-pc"
version = "0.1.0"
description = "Brain-inspired virtualized computer with agent-driven uniform cross-platform builds"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GENERAL-GOVERNANCE-" }]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
vbpc = "virtual_brain_pc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
